# sony-bravia-cli

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  http.rs  main.rs  mcp.rs  transport.rs
src/protocol/: error.rs  language.rs  mod.rs  mode_control.rs  picture.rs  screen.rs  signage.rs  sircs.rs  sound.rs  tests.rs  values.rs
