[package]
name = "sony-bravia-cli"
version = "0.6.0"
edition = "2024"

[dependencies]
clap = "4.5.40"
serialport = {version = "4.7.2", default-features = false}
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
