[package]
name = "sony-bravia-cli"
version = "0.7.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serialport = { version = "4.8.1", default-features = false }
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "2.0.17"
